Name:                objc2java
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            Translate pure ObjectiveC to pure Java, libraries be damned.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/objc2java
License:             PublicDomain
License-file:        LICENSE
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

Category:            Text

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

Library
  hs-source-dirs: src
  
  Exposed-modules:     Text.ObjC,
                       Text.Java,
                       Text.Common,
                       Text.Syntax.Extra,
                       Text.Syntax.Test,
                       Control.Isomorphism.Partial.Extra
                       Control.Isomorphism.Partial.Test
  -- Other-modules:       
  
  Build-depends:       base >= 4 && < 5,
                       doctest >= 0.9 && < 1,
                       invertible-syntax >= 0.2 && < 1,
                       partial-isomorphisms >= 0.2 && < 1,
                       parsec >= 3.1.3 && < 4

executable objc2java-demo
  build-depends:  base >= 4 && < 5,
                  objc2java >= 0.1 && < 1
  main-is:        Main.hs
  hs-source-dirs: demo
